# ffx-ctb-rust

./: .gitignore  Cargo.toml  PORTING.md  README.md  index.html
.github/workflows/: deploy-pages.yml
data/: anypercent_enemy_multi_action_candidates.csv
data/notes/anypercent/: encounters_notes.csv
examples/: render_ctb.rs  render_tracker.rs
fixtures/: ctb_actions_input.txt
pkg/: ffx_ctb_rust.d.ts  ffx_ctb_rust.js  ffx_ctb_rust_bg.wasm  ffx_ctb_rust_bg.wasm.d.ts  package.json
src/: api.rs  battle.rs  ctb.rs  data.rs  encounter.rs  lib.rs  model.rs  parser.rs  rng.rs  script.rs  simulator.rs
web/: index.html  main.js  styles.css
